Fix overflow-x on certain screen sizes

--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -11,6 +11,8 @@ body, html {
 }
 
 body {
+  overflow-x: hidden;
+
   &:before {
     position: absolute;
     opacity: 0;
